--- a/introduction.tex
+++ b/introduction.tex
@@ -2,8 +2,9 @@
 \usepackage[utf8]{inputenc}
 
 %opening
-\title{FLOSS education and computational thinking}
+\title{FLOSS education and computational thinking workshop @ OSS 2016}
 \author{}
+\date{}
 
 \begin{document}
 
@@ -13,7 +14,7 @@
 %\end{abstract}
 
 \section*{Introduction}
-The presence of FLOSS in education has not stopped growing in the last years both in K-12 and higher education, a trend that has benefited from using FLOSS to teach computer science and other disciplines, but also for teaching FLOSS as part of the curriculum. An example that can illustrate this situation is the teaching of computational thinking skills through computer programming, which is one of the latest trends in education. This field has been globally addressed almost exclusively with FLOSS technologies, both by using FLOSS platforms and programming languages, such as Scratch or Alice, but also by including in the curriculum the social aspects of software development that characterize FLOSS movements, like sharing and contributing to the community.The purpose of this workshop is to bring together free software experts and educators to discuss challenges that we face in the educational world at present and and that we will face in the future and how they can be undertaken from a FLOSS perspective.
+The presence of FLOSS in education has not stopped growing in the last years both in K-12 and higher education, a trend that has benefited from using FLOSS to teach computer science and other disciplines, but also for teaching FLOSS as part of the curriculum. An example that can illustrate this situation is the teaching of computational thinking skills through computer programming, which is one of the latest trends in education. This field has been globally addressed almost exclusively with FLOSS technologies, both by using FLOSS platforms and programming languages, such as Scratch or Alice, but also by including in the curriculum the social aspects of software development that characterize FLOSS movements, like sharing and contributing to the community. The purpose of this workshop is to bring together free software experts and educators to discuss challenges that we face in the educational world at present and and that we will face in the future and how they can be undertaken from a FLOSS perspective.
 
 \section*{Topics of interest}
 The topics of interest of this workshop include but are not limited to:
