--- a/introduction.tex
+++ b/introduction.tex
@@ -1,17 +1,53 @@
-\documentclass[a4paper,10pt]{article}
-\usepackage[utf8]{inputenc}
+%%%%%%%%%%%%%%%%%%%%%%%%%% author.tex %%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% sample root file for your contribution to an IFIP volume
+% published at Springer
+%
+% Use this file as a template for your own input.
+%
+%%%%%%%%%%%%%%%%%%%%%%%% Springer-Verlag %%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%opening
-\title{FLOSS education and computational thinking workshop @ OSS 2016}
-\author{}
-\date{}
+
+% RECOMMENDED %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass[ifip]{svmult}
+
+% choose options for [] as required from the list
+% in the Reference Guide, Sect. 2.2
+\usepackage{epsfig} 
+\usepackage{makeidx}         % allows index generation
+\usepackage{graphicx}        % standard LaTeX graphics tool
+                             % when including figure files
+\usepackage{multicol}        % used for the two-column index
+\usepackage[bottom]{footmisc}% places footnotes at page bottom
+% etc.
+% see the list of further useful packages
+% in the Reference Guide, Sects. 2.3, 3.1-3.3
+
+\makeindex             % used for the subject index
+                       % please use the style sprmidx.sty with
+                       % your makeindex program
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
+\title*{FLOSS education and computational thinking workshop @ OSS 2016}
+% Use \titlerunning{Short Title} for an abbreviated version of
+% your contribution title if the original one is too long
+\author{}
+%Name of Author\inst{2}}
+% Use \authorrunning{Short Title} for an abbreviated version of
+% your contribution title if the original one is too long
+\institute{}
+%\texttt{name@email.address}
+%\and Name and Address of your Institute \texttt{name@email.address}}
+%
+% Use the package "url.sty" to avoid
+% problems with special characters
+% used in your e-mail or web address
+%
 \maketitle
-
-%\begin{abstract}
-%\end{abstract}
 
 \section*{Introduction}
 The presence of FLOSS in education has not stopped growing in the last years. The trend has been clear both in K-12 and higher education. While using FLOSS can support teaching computer science and other disciplines, its benefits lie in teaching FLOSS itself as part of the curriculum. An example that can illustrate this situation is the teaching of computational thinking skills through computer programming, which is one of the latest trends in education - for instance, Finland has just added coding and computational thinking as part of the national core curriculum for primary education. This field has been globally addressed almost exclusively with FLOSS technologies, both by using FLOSS platforms and programming languages, such as Scratch or Alice, but also by including in the curriculum the social aspects of software development that characterize FLOSS movements, like sharing and contributing to the community. The purpose of this workshop is to bring together free software experts and educators to discuss challenges that we face in the educational world at present and and that we will face in the future and how they can be undertaken from a FLOSS perspective.
@@ -41,5 +77,23 @@ Specific questions that are of special interest to this workshop are:
  \item What FLOSS technologies do you use to teach computational thinking?
  \item How do you promote FLOSS social aspects in your lessons?
 \end{itemize}
+%
+%
+% BibTeX users please use
+% \bibliographystyle{}
+% \bibliography{}
+%
+% Non-BibTeX users please follow the syntax
+% the syntax of "referenc.tex" for your own citations
+%\input{referenc}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\printindex
 \end{document}
+
+
+
+
+
