--- a/introduction.tex
+++ b/introduction.tex
@@ -19,6 +19,7 @@
                              % when including figure files
 \usepackage{multicol}        % used for the two-column index
 \usepackage[bottom]{footmisc}% places footnotes at page bottom
+\usepackage[utf8]{inputenc}
 % etc.
 % see the list of further useful packages
 % in the Reference Guide, Sects. 2.3, 3.1-3.3
@@ -35,13 +36,16 @@
 \title*{FLOSS education and computational thinking workshop @ OSS 2016}
 % Use \titlerunning{Short Title} for an abbreviated version of
 % your contribution title if the original one is too long
-\author{}
-%Name of Author\inst{2}}
+\author{Jesús Moreno-León\inst{1}\and
+Terhi Kilamo\inst{2}
+\and
+Gregorio Robles\inst{3}}
 % Use \authorrunning{Short Title} for an abbreviated version of
 % your contribution title if the original one is too long
-\institute{}
-%\texttt{name@email.address}
-%\and Name and Address of your Institute \texttt{name@email.address}}
+\institute{Programamos.es, Spain,
+\texttt{jesus.moreno@programamos.es}
+\and Tampere University of Technology, Finland, \texttt{terhi.kilamo@tut.fi}
+\and Universidad Rey Juan Carlos, Spain, \texttt{grex@gsyc.urjc.es}}
 %
 % Use the package "url.sty" to avoid
 % problems with special characters
@@ -50,7 +54,11 @@
 \maketitle
 
 \section*{Introduction}
-The presence of FLOSS in education has not stopped growing in the last years. The trend has been clear both in K-12 and higher education. While using FLOSS can support teaching computer science and other disciplines, its benefits lie in teaching FLOSS itself as part of the curriculum. An example that can illustrate this situation is the teaching of computational thinking skills through computer programming, which is one of the latest trends in education - for instance, Finland has just added coding and computational thinking as part of the national core curriculum for primary education. This field has been globally addressed almost exclusively with FLOSS technologies, both by using FLOSS platforms and programming languages, such as Scratch or Alice, but also by including in the curriculum the social aspects of software development that characterize FLOSS movements, like sharing and contributing to the community. The purpose of this workshop is to bring together free software experts and educators to discuss challenges that we face in the educational world at present and and that we will face in the future and how they can be undertaken from a FLOSS perspective.
+The presence of FLOSS in education has not stopped growing in the last years. The trend has been clear both in K-12 and higher education. While using FLOSS can support teaching computer science and other disciplines, its benefits lie in teaching FLOSS itself as part of the curriculum. 
+
+An example that can illustrate this situation is the teaching of computational thinking skills through computer programming, which is one of the latest trends in education - for instance, Finland has just added coding and computational thinking as part of the national core curriculum for primary education. This field has been globally addressed almost exclusively with FLOSS technologies, both by using FLOSS platforms and programming languages, such as Scratch or Alice, but also by including in the curriculum the social aspects of software development that characterize FLOSS movements, like sharing and contributing to the community. 
+
+The purpose of this workshop is to bring together free software experts and educators to discuss challenges that we face in the educational world at present and and that we will face in the future and how they can be undertaken from a FLOSS perspective.
 
 \section*{Topics of interest}
 The topics of interest of this workshop include but are not limited to:
