Add PC and sponsorp

--- a/introduction.tex
+++ b/introduction.tex
@@ -85,6 +85,23 @@ Specific questions that are of special interest to this workshop are:
  \item What FLOSS technologies do you use to teach computational thinking?
  \item How do you promote FLOSS social aspects in your lessons?
 \end{itemize}
+\section*{Programme Committee}
+\begin{itemize}
+	\item Yasemin Allsop, University of Roehampton (United Kingdom)
+	\item Peter Parnes, Luleå University of Technology (Sweden)
+	\item Oystein Imsen, Lær Kidsa Koding (Norway)
+	\item Alessandro Bogliolo, University of Urbino (Italy)
+	\item Joek van Montfort (Netherlands)
+	\item Jordi Freixenet, University of Girona (Spain)
+	\item Eduard Muntaner, Inventors for Change (Spain)
+	\item Petri Ihantola, Tampere University of Technology (Finland)
+	\item Jesús Moreno, Programamos.es (Spain)
+	\item Terhi Kilamo, Tampere University of Technology (Finland)
+	\item Gregorio Robles, Universidad Rey Juan Carlos (Spain)
+\end{itemize}
+\section*{Sponsorship}
+This workshop is sponsored in part by the Region of Madrid under project ``eMadrid - Investigación y Desarrollo de tecnologías para el e-learning en la Comunidad de Madrid'' (S2013/ICE-2715).
+
 %
 %
 % BibTeX users please use
