Add Simon Marsden

--- a/introduction.tex
+++ b/introduction.tex
@@ -93,7 +93,8 @@ Specific questions that are of special interest to this workshop are:
 	\item Petri Ihantola, Tampere University of Technology (Finland)
 	\item Oystein Imsen, Lær Kidsa Koding (Norway)
 	\item Terhi Kilamo, Tampere University of Technology (Finland)
-	\item Joek van Montfort (Netherlands)
+	\item Simon Marsden, University of Portsmouth (United Kingdom)
+	\item Joek van Montfort, Scratchweb Foundation (Netherlands)
 	\item Jesús Moreno, Programamos.es (Spain)
 	\item Eduard Muntaner, Inventors for Change (Spain)
 	\item Peter Parnes, Luleå University of Technology (Sweden)
